<resources>
    <string name="app_name">RetrofitDemo</string>
    <string name="design">设计模式</string>
    <string name="thread">线程池</string>
    <string name="navigation">Navigation</string>
    <string name="player">播放器</string>
    <string name="lifecycle">LifeCycle</string>
    <string name="response">Response:</string>

    <string name="fragment_main">fragment Main</string>
    <string name="fragment_a">fragment A</string>
    <string name="set_play_media">设置播放数据</string>
    <string name="lifecyclefragment">lifecycleFragment</string>
    <string name="livedata">LiveData</string>
    <string name="MediatorLiveData" >MediatorLiveData</string>

</resources>
